--- a/trunk/APP/ECLIPSE_PROJECT/sp-ocr/configs/configs.properties
+++ b/trunk/APP/ECLIPSE_PROJECT/sp-ocr/configs/configs.properties
@@ -6,7 +6,7 @@
 #
 # The home address of installation (with or without slash at the end of String)
 # (linux) ocr_app_home = /usr/local/bin/
-# (win) ocr_app_home = C:\Program Files\Tesseract-OCR
+# (win) ocr_app_home = C:/Program Files/Tesseract-OCR
 
 ocr_app_name = tesseract
-ocr_app_home = C:\Program Files\Tesseract-OCR
+ocr_app_home = C/:Program Files/Tesseract-OCR
