--- a/trunk/APP/ECLIPSE_PROJECT/sp-ocr/configs/configs.properties
+++ b/trunk/APP/ECLIPSE_PROJECT/sp-ocr/configs/configs.properties
@@ -1,12 +1,49 @@
+# #############################################################################
 # OCR APP SETTINGS (A sample properties as ocr tesseract)
 #
-# A way to call runnable
+# (required) A way to call runnable
 # (linux) ocr_app_name = tesseract
 # (win) ocr_app_name = tesseract (optionally extension .exe)
-#
-# The home address of installation (with or without slash at the end of String)
+ocr_app_name = tesseract.exe
+
+# (required) The home address of installation (with or without slash at the end of String)
 # (linux) ocr_app_home = /usr/local/bin/
 # (win) ocr_app_home = C:/Program Files/Tesseract-OCR/
+ocr_app_home = C:/Tesseract-OCR
+# #############################################################################
 
-ocr_app_name = tesseract
-ocr_app_home = C/:Program Files/Tesseract-OCR
+# #############################################################################
+# SETTINGS TO TESSERACT, CURRENT OCR ENGINE
+#
+# (optional) tesseract current language to use as base to extract some specified characters
+# must follows ISO 639-3 Standards, that says; (default "por"/portuguese)
+# English 		: eng
+# Portuguese 	: por
+# Egyptian 		: egy
+# Greek			: ell
+# Italian		: ita
+# Japanese		: jpn
+# ... and so on ...
+tesseract_language = por
+
+# (optional) tesseract page segmentation mode (mode to read when runs extracting)
+# possible values
+# 0 - Orientation and script detection (OSD) only
+# 1 - Automatic page segmentation with OSD
+# 2 - Automatic page segmentation, but no OSD, or OCR
+# 3 (DEFAULT VALUE) - Fully automatic page segmentation, but no OSD
+# 4 - Assume a single column of text of variable sizes
+# 5 - Assume a single uniform block of vertically aligned text
+# 6 - Assume a single uniform block of text
+# 7 - Treat the image as a single text line
+# 8 - Treat the image as a single word
+# 9 - Treat the image as a single word in a circle
+# 10 - Treat the image as a single character
+tesseract_psm = 3
+
+# (required) tesseract file with plus configs at time running
+# Our main setting with this file is set tesseract to output result as a hOCR
+# string. must be a canonical path, never a relative path, even it is at the
+# same directory
+tesseract_file_configs = C:/sp-ocr-configs/tesseract_configs
+# #############################################################################
