--- a/APP/ECLIPSE_PROJECT/sp-ocr/sp-configs/configs.properties
+++ b/APP/ECLIPSE_PROJECT/sp-ocr/sp-configs/configs.properties
@@ -45,5 +45,7 @@ tesseract_psm = 3
 # Our main setting with this file is set tesseract to output result as a hOCR
 # string. must be a canonical path, never a relative path, even it is at the
 # same directory
-tesseract_file_configs = C:/sp-ocr-configs/tesseract_configs
+# (linux) tesseract_file_configs = /opt/tesseract/sp-configs/tesseract_configs
+# (win) tesseract_file_configs = C:/Tesseract-OCR/sp-configs/tesseract_configs
+tesseract_file_configs = C:/workspaces/eclipse/ocr/sp-ocr/sp-ocr/sp-configs/tesseract_configs
 # #############################################################################
