--- a/trunk/APP/ECLIPSE_PROJECT/sp-ocr/.classpath
+++ b/trunk/APP/ECLIPSE_PROJECT/sp-ocr/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_30"/>
 	<classpathentry kind="lib" path="/common-library/libs/jai_imageio.jar"/>
 	<classpathentry kind="lib" path="/common-library/libs/ghost4j-0.3.1.jar"/>
+	<classpathentry kind="lib" path="/common-library/libs/jericho-html-3.2.jar" sourcepath="/jericho-html-3.2"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
