--- a/APP/ECLIPSE_PROJECT/sp-ocr/.classpath
+++ b/APP/ECLIPSE_PROJECT/sp-ocr/.classpath
@@ -5,5 +5,9 @@
 	<classpathentry kind="lib" path="/common-library/libs/jai_imageio.jar"/>
 	<classpathentry kind="lib" path="/common-library/libs/ghost4j-0.3.1.jar"/>
 	<classpathentry kind="lib" path="/common-library/libs/jericho-html-3.2.jar" sourcepath="/jericho-html-3.2"/>
+	<classpathentry kind="lib" path="/common-library/libs/fontbox-1.6.0.jar"/>
+	<classpathentry kind="lib" path="/common-library/libs/jempbox-1.6.0.jar"/>
+	<classpathentry kind="lib" path="/common-library/libs/pdfbox-1.6.0.jar"/>
+	<classpathentry kind="lib" path="/common-library/libs/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
