--- a/APP/ECLIPSE_PROJECT/DataWatcher/data-watcher/pom.xml
+++ b/APP/ECLIPSE_PROJECT/DataWatcher/data-watcher/pom.xml
@@ -28,6 +28,11 @@
 			<artifactId>jtds</artifactId>
 			<version>1.2.4</version>
 		</dependency>
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>5.1.20</version>
+		</dependency>
 		
 		<dependency>
 		   <groupId>log4j</groupId>
