--- a/trunk/APP/ECLIPSE_PROJECT/DataWatcher/data-watcher/pom.xml
+++ b/trunk/APP/ECLIPSE_PROJECT/DataWatcher/data-watcher/pom.xml
@@ -46,6 +46,12 @@
 		    <artifactId>xstream</artifactId>
 		    <version>1.4.1</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.quartz-scheduler</groupId>
+		    <artifactId>quartz</artifactId>
+		    <version>2.1.3</version>
+		</dependency>
     </dependencies>
     
     <build>
