--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/WEB-INF/web.xml
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/WEB-INF/web.xml
@@ -3,6 +3,20 @@
 	<description>Barganhas ponto com</description>
  	<display-name>Barganhas.com</display-name>
  	
+ 	<!-- richfaces -->
+ 	<context-param>
+        <param-name>org.richfaces.SKIN</param-name>
+        <param-value>blueSky</param-value>
+    </context-param>
+	<context-param>
+        <param-name>org.richfaces.enableControlSkinning</param-name>
+        <param-value>false</param-value>
+    </context-param>
+	<context-param>
+        <param-name>org.richfaces.fileUpload.createTempFiles</param-name>
+        <param-value>true</param-value>
+    </context-param>
+ 	
  	<!-- required initial parameters -->
  	<context-param>
   		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
@@ -81,6 +95,11 @@
  	<welcome-file-list>
   		<welcome-file>index.jsp</welcome-file>
  	</welcome-file-list>
+ 	
+ 	<mime-mapping>
+ 		<extension>xcss</extension>
+ 		<mime-type>text/css</mime-type>
+ 	</mime-mapping>
  	
  	<login-config>
  		<auth-method>BASIC</auth-method>
