--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/WEB-INF/web.xml
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/WEB-INF/web.xml
@@ -81,11 +81,24 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/spring/applicationContext.xml</param-value>
 	</context-param>
-	
+
+	<!-- filters -->
+	<filter>
+	  	<filter-name>AdmAccessFilter</filter-name>
+	  	<filter-class>br.com.barganhas.web.converters.AdmAccessFilter</filter-class>
+  	</filter>
+  	
+  	<!-- filter mappings -->
+	<filter-mapping>
+		<filter-name>AdmAccessFilter</filter-name>
+		<url-pattern>*.jsf</url-pattern>
+		<url-pattern>/xhtml/admin/*</url-pattern>
+  	</filter-mapping>
+
+	<!-- listeners -->	
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   	</listener>
-	
 	<listener>
 		<listener-class>br.com.barganhas.web.beans.AppLoadListener</listener-class>
   	</listener>
