--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/.classpath
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/.classpath
@@ -4,6 +4,34 @@
 	<classpathentry kind="src" path="resource"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/aopalliance.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/asm-3.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/cglib-2.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-beanutils-1.7.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-collections-3.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-fileupload-1.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-logging.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/cssparser-0.9.5.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/guava-r08.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jsf-2.0-api.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jsf-2.0-impl-gae.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.aop-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.asm-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.beans-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.context-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.context.support-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.core-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.expression-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.jdbc-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.orm-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.transaction-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.web-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/richfaces-components-api-4.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/richfaces-components-ui-4.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/richfaces-core-api-4.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/richfaces-core-impl-4.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/sac-1.3.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/tomahawk20-1.1.10.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
