--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/WEB-INF/web.xml
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/WEB-INF/web.xml
@@ -85,13 +85,21 @@
 	<!-- filters -->
 	<filter>
 	  	<filter-name>AdmAccessFilter</filter-name>
-	  	<filter-class>br.com.barganhas.web.converters.AdmAccessFilter</filter-class>
+	  	<filter-class>br.com.barganhas.web.filters.AdmAccessFilter</filter-class>
+  	</filter>
+	<filter>
+	  	<filter-name>UserAccountAccessFilter</filter-name>
+	  	<filter-class>br.com.barganhas.web.filters.UserAccountAccessFilter</filter-class>
   	</filter>
   	
   	<!-- filter mappings -->
 	<filter-mapping>
 		<filter-name>AdmAccessFilter</filter-name>
 		<url-pattern>/xhtml/admin/*</url-pattern>
+  	</filter-mapping>
+	<filter-mapping>
+		<filter-name>UserAccountAccessFilter</filter-name>
+		<url-pattern>/xhtml/account/*</url-pattern>
   	</filter-mapping>
 
 	<!-- listeners -->	
