--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/WEB-INF/web.xml
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/WEB-INF/web.xml
@@ -16,6 +16,10 @@
         <param-name>org.richfaces.fileUpload.createTempFiles</param-name>
         <param-value>true</param-value>
     </context-param>
+    <context-param>
+        <param-name>org.richfaces.fileUpload.createTempFiles</param-name>
+        <param-value>false</param-value>
+    </context-param>
  	
  	<!-- required initial parameters -->
  	<context-param>
@@ -30,7 +34,7 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
 		<!-- the value Production is required even in development mode to GAE -->
 <!--         <param-value>Production</param-value> -->
-        <param-value>Development</param-value>
+        <param-value>Production</param-value>
     </context-param>
     <context-param>
  		<param-name>javax.faces.FACELETS_REFRESH_PERIOD</param-name>
@@ -116,9 +120,19 @@
   		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
   		<load-on-startup>1</load-on-startup>
 	</servlet>
+	<servlet>
+  		<servlet-name>FileServerServlet</servlet-name>
+  		<servlet-class>br.com.barganhas.web.servlets.FileServerServlet</servlet-class>
+	</servlet>
+	
+	<!-- SERVLET MAPPINGS -->
 	<servlet-mapping>
   		<servlet-name>FacesServlet</servlet-name>
 		<url-pattern>*.jsf</url-pattern>
+ 	</servlet-mapping>
+	<servlet-mapping>
+  		<servlet-name>FileServerServlet</servlet-name>
+		<url-pattern>/fileserver</url-pattern>
  	</servlet-mapping>
  	
  	<session-config>
