--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/.classpath
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/.classpath
@@ -6,10 +6,6 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/aopalliance.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/asm-3.1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/cglib-2.2.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-beanutils-1.7.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-collections-3.2.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-fileupload-1.2.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-logging.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/cssparser-0.9.5.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/guava-r08.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/jsf-2.0-api.jar"/>
@@ -26,12 +22,23 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.orm-3.0.4.RELEASE.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.transaction-3.0.4.RELEASE.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.web-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/sac-1.3.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-beanutils-1.7.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-digester-1.6.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-el-1.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-fileupload-1.2.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-io-1.3.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-validator-1.3.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/oro-2.0.8.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/tomahawk20-1.1.13.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/richfaces-components-api-4.0.0.Final.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/richfaces-components-ui-4.0.0.Final.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/richfaces-core-api-4.0.0.Final.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/richfaces-core-impl-4.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/sac-1.3.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/tomahawk20-1.1.10.jar"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
