--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/WEB-INF/web.xml
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/WEB-INF/web.xml
@@ -1,39 +1,20 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?><web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.5" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee                http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="barganhas.com"
+    version="2.5">
 
-	<description>Barganhas ponto com</description>
- 	<display-name>Barganhas.com</display-name>
+ 	<display-name>barganhas.com</display-name>
+ 	<welcome-file-list>
+  		<welcome-file>index.jsp</welcome-file>
+ 	</welcome-file-list>
  	
- 	<!-- richfaces -->
- 	<context-param>
-        <param-name>org.richfaces.SKIN</param-name>
-        <param-value>blueSky</param-value>
-    </context-param>
-	<context-param>
-        <param-name>org.richfaces.enableControlSkinning</param-name>
-        <param-value>false</param-value>
-    </context-param>
-	<context-param>
-        <param-name>org.richfaces.fileUpload.createTempFiles</param-name>
-        <param-value>true</param-value>
-    </context-param>
-    <context-param>
-        <param-name>org.richfaces.fileUpload.createTempFiles</param-name>
-        <param-value>false</param-value>
-    </context-param>
- 	
- 	<!-- required initial parameters -->
- 	<context-param>
-  		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-  		<param-value>server</param-value>
- 	</context-param>
+ 	<!-- JSF -->
  	<context-param>
 		<param-name>javax.faces.DEFAULT_SUFFIX</param-name>
 		<param-value>.xhtml</param-value>
 	</context-param>
  	<context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
-		<!-- the value Production is required even in development mode to GAE -->
-<!--         <param-value>Production</param-value> -->
         <param-value>Production</param-value>
     </context-param>
     <context-param>
@@ -59,26 +40,73 @@
   			/WEB-INF/tags/custom.taglib.xml;
 		</param-value>
  	</context-param>
- 	<context-param>
-		<param-name>com.sun.faces.allowTextChildren</param-name>
-		<param-value>true</param-value>
-	</context-param>
-	
-	<!-- Disable use of threading for single-threaded environments such as
-     the Google AppEngine. -->
+    <context-param>
+        <param-name>javax.faces.PROJECT_STAGE</param-name>
+        <param-value>Development</param-value>
+    </context-param>
+    <context-param>
+        <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+<!--         <param-value>client</param-value> -->
+        <param-value>server</param-value>
+    </context-param>
+    
+	<!-- MY FACES -->
+    <!-- 
+       We need to set annotation lifecycyle provider manually as org.apache.myfaces.config.annotation.NoInjectionAnnotationLifecycleProvider.
+       Other providers use some classes that are restricted on Google App Engine.   
+    -->
+    <context-param>
+        <param-name>org.apache.myfaces.config.annotation.LifecycleProvider</param-name>
+        <param-value>org.apache.myfaces.config.annotation.NoInjectionAnnotationLifecycleProvider</param-value>
+    </context-param>
+    <context-param>
+        <param-name>org.apache.myfaces.EXPRESSION_FACTORY</param-name>
+        <param-value>com.sun.el.ExpressionFactoryImpl</param-value>
+    </context-param>
+    <context-param>
+        <param-name>org.apache.myfaces.SECRET</param-name>
+        <param-value>UmljaEZhY2VzVGVtcEtleQ==</param-value>
+    </context-param>
+    <context-param>
+        <param-name>org.apache.myfaces.MAC_SECRET</param-name>
+        <param-value>UmljaEZhY2VzVGVtcEtleQ==</param-value>
+    </context-param>
+    <context-param>
+        <param-name>org.apache.myfaces.algorithm</param-name>
+        <param-value>Blowfish</param-value>
+    </context-param>
+
+	<!-- richfaces -->
 	<context-param>
-		<param-name>com.sun.faces.enableThreading</param-name>
-		<param-value>false</param-value>
-		<description>
-			When enabled, the runtime initialization and default ResourceHandler 
-			implementation will use threads to perform their functions. Set this 
-			value to false if threads aren't desired (as in the case of running 
-			within the Google Application Engine).
-			
-			Note that when this option is disabled, the ResourceHandler will not 
-			pick up new versions of resources when ProjectStage is development.
-		</description>
-	</context-param>
+        <param-name>org.richfaces.enableControlSkinning</param-name>
+        <param-value>false</param-value>
+    </context-param>
+    <context-param>
+        <param-name>org.richfaces.enableControlSkinningClasses</param-name>
+        <param-value>false</param-value>
+    </context-param>
+    <context-param>
+        <param-name>org.richfaces.skin</param-name>
+        <param-value>blueSky</param-value>
+    </context-param>
+    <context-param>
+        <param-name>org.richfaces.executeAWTInitializer</param-name>
+        <param-value>false</param-value>
+    </context-param>
+    <context-param>
+        <param-name>org.richfaces.resourceMapping.enabled</param-name>
+        <param-value>true</param-value>
+    </context-param>
+    <context-param>
+        <param-name>org.richfaces.fileUpload.createTempFiles</param-name>
+        <param-value>false</param-value>
+    </context-param>
+ 	
+ 	<!-- ajax 4 jsf (a4j) -->
+    <context-param>
+        <param-name>org.ajax4jsf.cache.CACHE_MANAGER_FACTORY_CLASS</param-name>
+        <param-value>org.ajax4jsf.cache.lru.LRUMapCacheFactory</param-value>
+    </context-param> 	
 	
 	<!-- spring framework -->
 	<context-param>
@@ -121,6 +149,11 @@
   		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet>
+        <servlet-name>RichfacesResourceServlet</servlet-name>
+        <servlet-class>org.richfaces.webapp.ResourceServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+	<servlet>
   		<servlet-name>FileServerServlet</servlet-name>
   		<servlet-class>br.com.barganhas.web.servlets.FileServerServlet</servlet-class>
 	</servlet>
@@ -130,6 +163,10 @@
   		<servlet-name>FacesServlet</servlet-name>
 		<url-pattern>*.jsf</url-pattern>
  	</servlet-mapping>
+ 	<servlet-mapping>
+        <servlet-name>RichfacesResourceServlet</servlet-name>
+        <url-pattern>/org.richfaces.resources/*</url-pattern>
+    </servlet-mapping>
 	<servlet-mapping>
   		<servlet-name>FileServerServlet</servlet-name>
 		<url-pattern>/fileserver</url-pattern>
@@ -138,10 +175,6 @@
  	<session-config>
 		<session-timeout>30</session-timeout>
 	</session-config>
- 	
- 	<welcome-file-list>
-  		<welcome-file>index.jsp</welcome-file>
- 	</welcome-file-list>
  	
  	<mime-mapping>
  		<extension>xcss</extension>
