--- a/branches/vendasebarganhas-dev_migrating_platform_43/project/resource/log4j.properties
+++ b/branches/vendasebarganhas-dev_migrating_platform_43/project/resource/log4j.properties
@@ -1,24 +1,15 @@
-# A default log4j configuration for log4j users.
-#
-# To use this configuration, deploy it into your application's WEB-INF/classes
-# directory.  You are also encouraged to edit it as you like.
+log4j.rootLogger=ERROR,DEV
+#ant:build:log#log4j.rootLogger=ERROR,PROD
 
-# Configure the console as our one appender
-log4j.appender.A1=org.apache.log4j.ConsoleAppender
-log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p [%c] - %m%n
+# CONSOLE IN DEVELOPMENT TIME
+log4j.appender.DEV=org.apache.log4j.ConsoleAppender
+log4j.appender.DEV.layout=org.apache.log4j.PatternLayout
+log4j.appender.DEV.layout.ConversionPattern=%d [%t] %-5p %c- %m%n
 
-# tighten logging on the DataNucleus Categories
-log4j.category.DataNucleus.JDO=WARN, A1
-log4j.category.DataNucleus.Persistence=WARN, A1
-log4j.category.DataNucleus.Cache=WARN, A1
-log4j.category.DataNucleus.MetaData=WARN, A1
-log4j.category.DataNucleus.General=WARN, A1
-log4j.category.DataNucleus.Utility=WARN, A1
-log4j.category.DataNucleus.Transaction=WARN, A1
-log4j.category.DataNucleus.Datastore=WARN, A1
-log4j.category.DataNucleus.ClassLoading=WARN, A1
-log4j.category.DataNucleus.Plugin=WARN, A1
-log4j.category.DataNucleus.ValueGeneration=WARN, A1
-log4j.category.DataNucleus.Enhancer=WARN, A1
-log4j.category.DataNucleus.SchemaTool=WARN, A1
+# FILE IN PRODUCTION TIME
+#ant:build:log#log4j.appender.PROD=org.apache.log4j.DailyRollingFileAppender
+#ant:build:log#log4j.appender.PROD.file=${catalina.base}/logs/vendasebarganhas
+#ant:build:log#log4j.appender.PROD.encoding=UTF-8
+#ant:build:log#log4j.appender.PROD.DatePattern='.'dd-MM-yyyy'.log'
+#ant:build:log#log4j.appender.PROD.layout=org.apache.log4j.PatternLayout
+#ant:build:log#log4j.appender.PROD.layout.ConversionPattern=%d [%t] %-5p %c- %m%n
